# rust-data-table

./: Cargo.toml  README.md  deploy.yml  hosts.ini  rdatatable.service.j2
data_dir/: 19a0ebd6-c666-4e7b-82e6-8c17b61b24f5.csv  2a29ac3b-ab55-4cff-b1f0-b7ce82f53eec.csv
src/: data_types.rs  db_ops.rs  main.rs  string_ops.rs
templates/: index.html
