[package]
name = "rust-datatable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
env_logger = "0.10.0"
actix-cors = "0.6.4"
actix-web = "4.3.0"
serde_json = "1.0.93"
serde = { version = "1.0.2" , features = ["derive"] }
reqwest = { version = "0.11.18" , features = ["json"] }
serde_yaml = "0.9.25"
serde_derive = "1.0.176"
tokio = { version = "1.29.1", features = ["full"] }
futures = { version = "0.3.28", features = [] }
lazy_static = "1.4.0"
sqlx = { version = "0.7.3", features = ["postgres"]}
dotenv = "0.15.0"
tokio-postgres = {version = "0.7.10", features = ["with-uuid-0_8", "with-serde_json-1"] }
database = "0.5.0"
apps = "0.2.2"
emoji-logger = "0.1.0"
deadpool-postgres = "0.11.0"
postgres-openssl = "0.5.0"
openssl = "0.10.60"
config = "0.13.4"
uuid = { version = "0.8.2" , features = ["serde", "v4"]}
derive_more = { version = "0.99.17", features = [] }
regex = "1.7.1"
dirs = "5.0.1"
async-std = { version = "1.12.0", features = [] }
tera = "1.19.1"
calamine = "0.22.1"
actix-files = "0.6.2"
csv = { version = "1.3.0", features = [] }